# vscode-vcpkg

./: .clang-format  CMakeLists.txt  CMakeUserPresets.json  vcpkg.json
